# Ai-Assistant-New

./: .gitignore  DEPENDENCIES.md  README.md  cli_bot.py  knowledge_base_handler.py  main.py  models.py  pyproject.toml  render.yaml  requirements.txt  setup_github.sh  token_logs.txt  token_utils.py
attached_assets/: Pasted-import-os-from-zipfile-import-ZipFile-file-structure-support-bot-requirements-txt-fas-1746371435020.txt
chroma_db/: chroma.sqlite3
knowledge_base/: faq.txt  product_info.txt  troubleshooting.txt
static/: script.js  styles.css
templates/: analytics.html  faqs.html  index.html
