[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6.3",
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "langchain-community>=0.3.23",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.16",
    "openai>=1.77.0",
    "psycopg2-binary>=2.9.10",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.2",
    "langchain-core>=0.3.58",
]
